<resources>
    <string name="app_name">StoryApp</string>
    <string name="title_signup_page">Fill in your data below!</string>
    <string name="signup">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="tv_desc">Description</string>
    <string name="password">Password</string>
    <string name="message_login_page">Insert your data below!</string>
    <string name="password_less_than_six_char">Password less than 6 character</string>
    <string name="title_alert_success">Yeah!</string>
    <string name="title_alert_failed">Oops!</string>
    <string name="message_alert_register_success">Your account has been created.</string>
    <string name="message_alert_add_story_success">Story has been uploaded!</string>
    <string name="message_alert_add_story_failed">Story failed to upload!</string>
    <string name="message_alert_login_success">You have successfully logged in.</string>
    <string name="message_alert_login_failed">Email or password does not match.</string>
    <string name="message_alert_register_failed">Something went wrong. Try again!</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="ok">Ok</string>
    <string name="title_login_page">Welcome to Story App</string>
    <string name="insert_name">Insert name</string>
    <string name="insert_email">Insert email</string>
    <string name="insert_desc">Insert story description</string>
    <string name="insert_password">Insert password</string>
    <string name="insert_image">Insert image</string>
    <string name="email_not_valid">Email does not valid</string>
    <string name="token_format">Bearer %s</string>
    <string name="error_get_info_user">Something went wrong!</string>
    <string name="error_didnt_get_permission">Did not get permission.</string>
    <string name="error_location_not_found">Location is not found. Try Again.</string>
    <string name="choose_a_picture">Choose a Picture</string>

    <string name="ivProfileTransitionName">profile</string>
    <string name="nameProfileTransitionName">name</string>
    <string name="descProfileTransitionName">desc</string>

    <string name="signup_content_desc">Register Image</string>
    <string name="login_content_desc">Login Image</string>
    <string name="story_content_desc">Story Image</string>
    <string name="don_t_have_an_account">Do not have an account? Register now!</string>
    <string name="have_an_account">Do you have an account? Login here!</string>
    <string name="data_is_empty">The story is not available</string>
    <string name="detail_profile_content_desc">Profile Detail Image</string>
    <string name="fab_add_content_desc">Add Story Button</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="tambah_story_content_desc">Add Story Image</string>
    <string name="logout">Logout</string>
    <string name="title_detail_story">Story Detail</string>
    <string name="title_google_maps">Google Maps</string>
    <string name="title_add_story">Add Story</string>
    <string name="change_language">Change Language</string>
    <string name="open_google_maps">Open Google Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Retry</string>
    <string name="get_your_location">Get Your Location</string>
    <string name="location_format">Lat: %s\nLong: %s</string>
</resources>